@@ -1053,7 +1053,7 @@ bool ciel_deserialize_hook(struct rfile *rf)
 
 	ciel_clear_hook();
 
-	ts.ch_count= 0;
+	ts.ch_count = 0;
 
 	/* For each character. */
 	for (i = 0; i < CL_CHARACTERS; i++) {
@@ -1065,10 +1065,13 @@ bool ciel_deserialize_hook(struct rfile *rf)
 			ts.name[i] = NULL;
 		}
 		if (gets_rfile(rf, name, sizeof(name)) != NULL) {
-			ts.name[i] = strdup(name);
-			if (ts.name[i] == NULL)
-				return false;
-			ts.ch_count++;
+			if (strcmp(name, "") != 0) {
+				ts.name[i] = strdup(name);
+				if (ts.name[i] == NULL)
+					return false;
+				ts.ch_count++;
+				log_info("%s: %d", name, ts.ch_count);
+			}
 		}
 
 		/* x */
